Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
reactos-bootcd-0.4.15-dev-6166-ge7ccb36-x86-gcc-lin-dbg
- Open ServMan
- File > Export
- Select "Coma Delimited" (not the Tab delimited by default)
Export is Tab delimited
Expected result : Coma delimited output
Cause : SaveServicesToFile function (base/applications/mscutils/servman/export.c) does not check user format selection and always separated with \t in https://git.reactos.org/?p=reactos.git;a=blob;f=base/applications/mscutils/servman/export.c#l116