[SERVMAN] Respect the user-selected export format (#5394)

- Use either tab or comma separator depending on user's selection.
- Skip adding a separator after the last table cell.

CORE-19001